spacing issues

--- a/text.css
+++ b/text.css
@@ -396,11 +396,9 @@ display: inline-block;
     width:100%;
     height:30px;
     margin-top:56px;
-    background-color:blue;
     
 }
 #infoWrap #selctionroller ul{
-    background-color:green;
     width:66px;
     height:22px;
     position:absolute;
